--- a/index.html
+++ b/index.html
@@ -5,18 +5,59 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/backend.js" defer></script>
     <script src="/frontend.js" defer></script>
+    <script src="/charts.js"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
 </head>
 
+<header class="sticky-top">
+    <div class="row row-cols-auto p-2" style="background-color: #a229ff;">
+
+        <div class="col">
+            <div class="Visor de capas">
+                <a class="dropdown-item ms-3" id="test" axis="y" href="#" onclick="añadirGrafico(this)">
+                    Generar
+                </a>
+
+                <label for="input-file">Specify a file:</label><br>
+                <input type="file" id="input-file">
+
+            </div>
+
+        </div>
+    </div>
+    <!-- barra de menu de mapas -->
+</header>
+
+
 <body>
-    <div>
-        <label for="input-file">Specify a file:</label><br>
-        <input type="file" id="input-file">
-        <button onclick="getFile()">Hola</button>
+
+    <!-- Carga la base de datos DataPrincipal -->
+    <div id="chartttt">
+        
+        <div class="row">
+            <div class="h3 text-center" id="tlGrafico"></div>
+        </div>
+
+        <div class="row m-1"></div>
+
     </div>
 
-    <textarea id="content-target"></textarea>
+    <div id="DivGraficos">
+        <canvas id="grafica"></canvas>
+    </div>
+
 </body>
 
 </html>
