--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <title>Test</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="/backend.js" defer></script>
-    <script src="/frontend.js" defer></script>
-    <script src="/charts.js"></script>
+    <script src="./src/backend.js" defer></script>
+    <script src="./src/frontend.js" defer></script>
+    <script src="./src/charts.js" defer></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
