--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <ul class="dropdown-menu shadow rounded ms-3">
 
                     <li>
-                        <a class="dropdown-item ms-3" id="contarMensajes" label="Mensajes por usuario" axis="y" href="#"
+                        <a class="dropdown-item ms-3" id="contarMensaje" label="Mensajes por usuario" axis="y" href="#"
                             onclick="añadirGrafico(this)">
                             Mensajes por telefono
                         </a>
