feat: contar multimedia por usuario

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
                         </a>
                     </li>
 
+                    <li>
+                        <a class="dropdown-item ms-3" id="contarMultimedia" label="Multimedia por usuario" axis="y" href="#"
+                            onclick="añadirGrafico(this)">
+                            Multimedia por usuario
+                        </a>
+                    </li>
+
+
                 </ul>
             </div>
         </div>
