feat: add contador emojis (test)

--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
                     </li>
 
 
+                    <li>
+                        <a class="dropdown-item ms-3" id="contarEmoji" label="Emojis mas usados" axis="y" href="#"
+                            onclick="añadirGrafico(this)">
+                            Emojis mas usados
+                        </a>
+                    </li>
+
+
                 </ul>
             </div>
         </div>
