work: contar palabras

--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@
 
             <div class="d-flex gap-me align-items-center">
                 <select class="form-control" id="selectGraph" onchange="añadirGrafico(this.value)">
-                    <option value="contarMensaje" id="contarMensaje" label="Mensajes por usuario" axis="y" href="#">
+                    <option value="contarMensaje" id="contarMensaje" label="Mensajes por usuario" axis="y">
                         Mensajes por telefono
                     </option>
-                    <option value="contarFecha" id="contarFecha" label="Mensajes por fecha" axis="y" href="#">
+                    <option value="contarFecha" id="contarFecha" label="Mensajes por fecha" axis="y">
                         Mensajes por fecha
                     </option>
-                    <option value="contarHora" id="contarHora" label="Mensajes por hora" axis="y" href="#">
+                    <option value="contarHora" id="contarHora" label="Mensajes por hora" axis="y">
                         Mensajes por hora
                     </option>
-                    <option value="contarMultimedia" id="contarMultimedia" label="Multimedia por usuario" axis="y"
-                        href="#">
+                    <option value="contarMultimedia" id="contarMultimedia" label="Multimedia por usuario" axis="y">
                         Multimedia por usuario
                     </option>
-                    <option value="contarEmoji" id="contarEmoji" label="Emojis mas usados" axis="y" href="#">
+                    <option value="contarEmoji" id="contarEmoji" label="Emojis mas usados" axis="y">
                         Emojis mas usados
+                    </option>
+                    <option value="contarPalabra" id="contarPalabra" label="Palabras mas usadas" axis="y">
+                        Palabras mas usadas
                     </option>
                 </select>
 
