--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Visualize WhatsApp Stats</title>
 
     <!-- Modules -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
