--- a/index.html
+++ b/index.html
@@ -2,81 +2,91 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Visualize WhatsApp Stats</title>
+  <meta charset="UTF-8">
+  <title>Visualize WhatsApp Stats</title>
 
-    <!-- Modules -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- Modules -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <!-- Boostrap 5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+  <!-- Boostrap 5 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
 
-    <!-- scripts -->
-    <script src="./src/charts.js" defer></script>
-    <script src="./src/index.js" defer></script>
-    <script src="./src/misc.js" defer></script>
-    <link rel="stylesheet" href="./src/style.css">
+  <!-- scripts -->
+  <script src="./src/charts.js" defer></script>
+  <script src="./src/index.js" defer></script>
+  <script src="./src/misc.js" defer></script>
+  <link rel="stylesheet" href="./src/style.css">
 </head>
+
+<!--Main Navigation-->
+<header>
+  <nav>
+    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+      <button class="nav-link active" type="button">Inicio</button>
+    </div>
+  </nav>
+</header>
+<!--Main Navigation-->
 
 <body>
 
-    <div class="container mt-4">
+  <div class="container mt-4">
 
-        <!-- Seleccionar grafico-->
-        <fieldset class="grupo border p-3 rounded">
-            <legend class="float-none w-auto px-3 legend">Grafico</legend>
+    <!-- Seleccionar grafico-->
+    <fieldset class="grupo border p-3 rounded">
+      <legend class="float-none w-auto px-3 legend">Grafico</legend>
 
-            <div class="d-flex gap-me align-items-center">
-                <select class="form-control" id="selectGraph" onchange="añadirGrafico(this.value)">
-                    <option value="contarMensaje" id="contarMensaje" label="Mensajes por usuario" axis="y">
-                        Mensajes por telefono
-                    </option>
-                    <option value="contarFecha" id="contarFecha" label="Mensajes por fecha" axis="y">
-                        Mensajes por fecha
-                    </option>
-                    <option value="contarHora" id="contarHora" label="Mensajes por hora" axis="y">
-                        Mensajes por hora
-                    </option>
-                    <option value="contarMultimedia" id="contarMultimedia" label="Multimedia por usuario" axis="y">
-                        Multimedia por usuario
-                    </option>
-                    <option value="contarEmoji" id="contarEmoji" label="Emojis mas usados" axis="y">
-                        Emojis mas usados
-                    </option>
-                    <option value="contarPalabra" id="contarPalabra" label="Palabras mas usadas" axis="y">
-                        Palabras mas usadas
-                    </option>
-                </select>
+      <div class="d-flex gap-me align-items-center">
+        <select class="form-control" id="selectGraph" onchange="añadirGrafico(this.value)">
+          <option value="contarMensaje" id="contarMensaje" label="Mensajes por usuario" axis="y">
+            Mensajes por telefono
+          </option>
+          <option value="contarFecha" id="contarFecha" label="Mensajes por fecha" axis="y">
+            Mensajes por fecha
+          </option>
+          <option value="contarHora" id="contarHora" label="Mensajes por hora" axis="y">
+            Mensajes por hora
+          </option>
+          <option value="contarMultimedia" id="contarMultimedia" label="Multimedia por usuario" axis="y">
+            Multimedia por usuario
+          </option>
+          <option value="contarEmoji" id="contarEmoji" label="Emojis mas usados" axis="y">
+            Emojis mas usados
+          </option>
+          <option value="contarPalabra" id="contarPalabra" label="Palabras mas usadas" axis="y">
+            Palabras mas usadas
+          </option>
+        </select>
 
-                <div class="vr"></div>
-                <div>
-                    <label for="loadFileInput" class="btn btn-outline-success">
-                        <i class="bi bi-upload"></i>
-                        Cargar chat
-                    </label>
-                    <input id="loadFileInput" type="file" style="display: none;" onchange="loadFile(this)"
-                        class="btn btn-outline-success text-white">
-                </div>
-
-            </div>
-        </fieldset>
-
-        <hr>
-        <!-- Grafico -->
-        <div class="grupo border p-3 rounded">
-
-            <!-- titulo del grafico -->
-            <label class="h3 text-center" id="tlGrafico"></label>
-            <!-- Contenedor del grafico -->
-            <div class="chart-container" id="graphContainer">
-                <canvas id="grafica"></canvas>
-            </div>
+        <div class="vr"></div>
+        <div>
+          <label for="loadFileInput" class="btn btn-outline-success">
+            <i class="bi bi-upload"></i>
+            Cargar chat
+          </label>
+          <input id="loadFileInput" type="file" style="display: none;" onchange="loadFile(this)"
+            class="btn btn-outline-success text-white">
         </div>
 
+      </div>
+    </fieldset>
 
+    <hr>
+    <!-- Grafico -->
+    <div class="grupo border p-3 rounded">
+
+      <!-- titulo del grafico -->
+      <label class="h3 text-center" id="tlGrafico"></label>
+      <!-- Contenedor del grafico -->
+      <div class="chart-container" id="graphContainer">
+        <canvas id="grafica"></canvas>
+      </div>
     </div>
+
+
+  </div>
 
 </body>
 
